--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .DS_Store
 hiboux.xcodeproj/project.xcworkspace/xcuserdata/*
+
+hiboux.xcodeproj/xcuserdata/yoanngern.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
